# dziki-zgon

./: .cursorignore  .cursorrules  .geminiignore  .gitignore  AI_CONTEXT.md  ARCHITECTURE.md  MEMORY_OPTIMIZATION.md  MEMORY_USAGE.md  Makefile  README.md  SPRITES.md  TEST_PLAN.md  TOOLS.md  ascii_render.py  check_xex.py  dump.py  hardware.asm  help.atdbg  history_player.txt  main.asm  main.lab  moon.asm  parse_xex.py  render_screens.py  requirements.txt  screens_ascii.txt  title-0.asm  title-0_colors.asm  title-0_displaylist.asm  title-0a.asm  title-0a_colors.asm  title-0a_displaylist.asm  title.asm  title_colors.asm  title_displaylist.asm  trace_rom.py  witcher.asm  zeropage.asm
.agent/: profile.md
.sdd/: altirra-auto-debugger-basic-improvement-walkthrough.sd  altirra-auto-debugger-basic-walkthrough.sd  altirra-auto-debugger-basic.sd  altirra-auto-debugger-full.sd  debug-bridge.md  debug-consolidation-plan.md  engine-mailbox-pattern.md  game-engine-architecture.md  latest-changes.walkthrough.md  object-studio.md  sprite-studio.md  world-builder-walkthrough.md  world-builder.md  (+3 more)
debug_bridge/: README.md  debug.yaml  gf.atdbg  pyproject.toml  quit.atdbg  test.atdbg
debug_bridge/debug_bridge/: breakpoint.py  cli.py  config.py  emulator.py  errors.py  exporter.py  main.py  memory.py  report.py  scenario.py  screenshot.py  session.py  symbols.py
debug_bridge/debug_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
debug_bridge/tests/: test_cli_and_breakpoint.py  test_config.py  test_session_and_parser.py  test_symbols.py
(+139 files in other folders)
