[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "debug-bridge"
version = "0.1.0"
description = "A bridge for debugging Atari 8-bit games in Altirra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0.1",
    "Pillow>=10.2.0"
]

[project.scripts]
debug-bridge = "debug_bridge.cli:main_cli"

[tool.setuptools]
packages = ["debug_bridge"]
